Python.txt
Python 3.13.0 (tags/v3.13.0:60403a5, Oct  7 2024, 09:38:07) [MSC v.1941 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> pip install mouse
  File "<python-input-0>", line 1
    pip install mouse
        ^^^^^^^
SyntaxError: invalid syntax
>>>




